--- a/MEhome/h5/src/css/common.css
+++ b/MEhome/h5/src/css/common.css
@@ -104,12 +104,13 @@
   border-radius: 0.16rem;
   border: none;
   outline: none;
-  padding-left: 0.68rem;
+  padding-left: 0.53rem;
+  padding-right: 0.1rem;
 }
 
 .mh-header__search-icon {
   position: absolute;
-  left: 0.3rem;
+  left: 0.15rem;
   top: 0.02rem;
 }
 .mh-header__search-icon i {font-size: 0.28rem;}
