--- a/MEhome/h5/src/css/evaluation.css
+++ b/MEhome/h5/src/css/evaluation.css
@@ -35,6 +35,7 @@
   border: 1px solid #666;
   border-radius: 0.12rem;
   padding-left: 0.6rem;
+  padding-right: 0.2rem;
   font-size: 0.24rem;
 }
 
