--- a/MEhome/h5/src/css/common.css
+++ b/MEhome/h5/src/css/common.css
@@ -85,7 +85,7 @@
   display: inline-block;
   width: 1.88rem;
   height: 0.72rem;
-  background: url('../img/Logo.png') no-repeat;
+  background: url('../svg/logo.svg') no-repeat;
   background-size: 100% 100%;
   vertical-align: top;
   margin-top: 0.1rem;
@@ -165,6 +165,8 @@
 .mh-contact__logo-img {
   width: 2.5rem;
   height: 0.96rem;
+  background: url('../svg/logo.svg') no-repeat;
+  background-size: 100% 100%;
 }
 .mh-contact__tel {
   width: 2.9rem;
