--- a/MEhome/h5/src/css/common.css
+++ b/MEhome/h5/src/css/common.css
@@ -95,7 +95,7 @@
   display: inline-block;
   width: 2.92rem;
   height: 0.92rem;
-  background: url('../img/Logo_large.png') no-repeat;
+  background: url('../svg/logo.svg') no-repeat;
   background-size: 100% 100%;
   vertical-align: top;
   margin-top: 0.02rem;
