--- a/MEhome/h5/src/css/iphonex.css
+++ b/MEhome/h5/src/css/iphonex.css
@@ -32,11 +32,16 @@
       bottom: 0;
       width: 100%;
       height: 34px;
-      background: #f7f7f8;
+      background: #f2f2f2;
+    }
+
+    .has-white-bottombar:after {
+      background-color: #fff;
     }
 
     /*导航操作栏上移*/
     .bottom-menu-fixed {
-        bottom: 34px;
+        bottom: 34px!important;
+
     }
 }
